force-app/main/default/objects/Candidate_Skill__c/Candidate_Skill__c.object-meta.xml
<CustomObject>
    <fields>
        <fullName>Candidate__c</fullName>
        <label>Candidate</label>
        <referenceTo>Candidate__c</referenceTo>
        <relationshipLabel>Candidate Skills</relationshipLabel>
        <relationshipName>Candidate_Skills</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Experience_Level__c</fullName>
        <label>Experience Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Beginner</fullName>
                </value>
                <value>
                    <fullName>Intermediate</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>Expert</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skill__c</fullName>
        <label>Skill</label>
        <referenceTo>Skill__c</referenceTo>
        <relationshipLabel>Candidate Skills</relationshipLabel>
        <relationshipName>Candidate_Skills</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Skill_Rating__c</fullName>
        <label>Skill Rating</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Years_Of_Experience__c</fullName>
        <label>Years of Experience</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Candidate Skill</label>
    <nameField>
        <label>Candidate Skill Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidate Skills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>