force-app/main/default/objects/Candidate_Skill__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <label>Skill</label>
    <referenceTo>Skill__c</referenceTo>
    <relationshipLabel>Candidate Skill</relationshipLabel>
    <relationshipName>Candidate_Skill</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>