force-app/main/default/objects/Candidate_Skill__c/fields/Skill_Rating__c.field-meta.xml
<CustomField>
    <fullName>Skill_Rating__c</fullName>
    <label>Skill Rating</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>